# jugni-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
ai/: openai_client.py
api/: app.py  dependencies.py  index.py  lifespan.py
controllers/: build_day_report.py  delete_meal.py  dispatch_update.py  handle_photo.py
core/: dates.py  logging.py  settings.py
domain/: analysis.py  breakdown.py  calorie_target.py  day.py  photo.py  profile.py  recommendation.py  scoring.py  streak.py
evals/: README.md  __init__.py  cases.py  harness.py  run.py
image_analyser/: estimator.py  factory.py  parser.py  prompts.py
llm/: __init__.py  json_parsing.py  openai_client.py  smart_router.py
presenters/: day_summary.py  macros.py  meal_deleted.py  meal_updated.py  meals_csv.py  photo_reply.py  profile_reply.py  recommend_reply.py  streak_nudge.py
scripts/: replay_day.py  set_bot_commands.py
storage/: _hash_codec.py  factory.py  photo_repository.py  profile_repository.py  redis_photo_repository.py  redis_profile_repository.py  webhook_dedupe.py
summary_analyser/: factory.py  parser.py  prompts.py  summarizer.py
telegram/: __init__.py  api.py  backfill.py  commands.py  poller.py  updates.py
users/: __init__.py
workflows/: build_day_report.py  build_recommendation_context.py  delete_meal.py  dispatch_update.py  dm_reply.py  handle_context_command.py  handle_intake.py  handle_photo.py  handle_profile_command.py  handle_recommend.py  llm_cap.py  meal_notifications.py  onboarding.py  personalization.py  (+3 more)
(+43 files in other folders)
