[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "food-summary-bot"
version = "0.1.0"
description = "Telegram group food photo calorie summary bot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "openai>=1.91.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[project.scripts]
food-summary-api = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "analyzers*",
    "api*",
    "core*",
    "domain*",
    "llm*",
    "presenters*",
    "storage*",
    "telegram*",
    "workflows*",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.lint.per-file-ignores]
"analyzers/image/prompts.py" = ["E501"]
"analyzers/summary/prompts.py" = ["E501"]
"presenters/day_summary.py" = ["E501"]
"api/routes/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
